tdf#152974 revert change to ORichTextModel::getPropertyDefaultByHandle

properties that match the default are not exported, so we're basically
stuck with what is in there for compatibility with older versions, so
revert

commit ca46afebb7dc0ec4375e995fa90edccbed6c2530
Date:   Tue Oct 4 16:22:51 2022 +0100

    default to 'flat' instead of '3D Look' for form controls

and set m_nBorder to the desired new default in the ctor but
leave getPropertyDefaultByHandle as it always was

Change-Id: Ia862fc6851248fc9b16b3b4c505fdaf6fdb4b2ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151497
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>