forms/source/richtext/richtextmodel.cxx
@@ -64,7 +64,9 @@ namespace frm
         m_nClassId = FormComponentType::TEXTFIELD;
 
         getPropertyDefaultByHandle( PROPERTY_ID_DEFAULTCONTROL          ) >>= m_sDefaultControl;
-        getPropertyDefaultByHandle( PROPERTY_ID_BORDER                  ) >>= m_nBorder;
+        // Default to 'flat' instead of '3D Look' for form controls, but don't change
+        // getPropertyDefaultByHandle, see tdf#152974
+        m_nBorder = 2;
         getPropertyDefaultByHandle( PROPERTY_ID_ENABLED                 ) >>= m_bEnabled;
         getPropertyDefaultByHandle( PROPERTY_ID_ENABLEVISIBLE           ) >>= m_bEnableVisible;
         getPropertyDefaultByHandle( PROPERTY_ID_HARDLINEBREAKS          ) >>= m_bHardLineBreaks;
@@ -450,7 +452,9 @@ namespace frm
         }
     }
 
-
+    // note tdf#152974, we can't simply change a default here because properties
+    // that match the default are not exported, so for compatibility these
+    // can't be changed without some sort of solution for that
     Any ORichTextModel::getPropertyDefaultByHandle( sal_Int32 _nHandle ) const
     {
         Any aDefault;
@@ -506,7 +510,7 @@ namespace frm
             break;
 
         case PROPERTY_ID_BORDER:
-            aDefault <<= sal_Int16(2);
+            aDefault <<= sal_Int16(1);
             break;
 
         default:
